# CentiVerse-Desktop

./: .gitignore  .hintrc  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20220101_000002_create_groups_table.rs  m20220101_000003_create_friend_collections_table.rs  m20220101_000004_create_group_members_table.rs  m20220101_000005_create_activities_table.rs  m20220101_000006_create_transactions_table.rs  m20220101_000007_create_upi_payments_table.rs  m20220101_000008_create_cash_transactions_table.rs  m20220101_000009_create_notifications_table.rs  m20250325_082658_make_description_required.rs
src-tauri/src/: db.rs  main.rs
src-tauri/src/controllers/: activities_controller.rs  auth_controller.rs  expense_controller.rs  group_members_controller.rs  groups_controller.rs  mod.rs  user_controller.rs
src-tauri/src/custom_errors/: activities.rs  app.rs  auth.rs  groups.rs
src-tauri/src/entities/: activities.rs  cash_transactions.rs  friend_collections.rs  group_members.rs  groups.rs  mod.rs  notifications.rs  transactions.rs  upi_payments.rs  users.rs
src-tauri/src/models/: activities.rs  auth.rs  group_members.rs  groups.rs  mod.rs
src-tauri/src/request_verifier/: activities.rs  group_members.rs  groups.rs  mod.rs  users.rs
src-tauri/src/routes/: activities.rs  auth.rs  expenses.rs  group_members.rs  groups.rs  mod.rs  users.rs
src-tauri/src/utils/: jwt_token.rs
(+67 files in other folders)
