[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5" }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Tauri
tauri = { version = "2.3.1" }
tauri-plugin-log = "2.0.0-rc"

# Web Framework & Async Runtime
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database & ORM (Postgres)
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "json", "time"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-rust_decimal"] }
sea-orm-macros = "0.12"
rust_decimal = { version = "1.30", features = ["db-postgres"] }

# Error handling and dotenv
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"

# Date and Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Utility
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
